--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,16 +4,24 @@
 	"RegisterForm.Title": "Register",
 	"RecoveryForm.Title": "Recovery",
 	"LoginForm.Title": "Login",
-	"Errors.401": "User or password incorrect",
-	"Errors.406": "Insufficient permissions",
-	"Errors.500": "Server error",
+	"Status.200": "Success",
+	"Status.400": "Bad request",
+	"Status.401": "User or password incorrect",
+	"Status.404": "Not found",
+	"Status.406": "Insufficient permissions",
+	"Status.422": "Validation error",
+	"Status.500": "Server error",
 	"Users.Title": "Users",
 	"EditUser.Title": "EDIT USER",
 	"NewUser.Title": "NEW USER",
 	"DeleteHeader": "DELETE USER",
-	"DeleteMessage": "Are you sure you want to delete the user?",
+	"DeleteMessage": "Are you sure you want to delete?",
 	"Create": "Create",
 	"Accept": "Accept",
-	"Cancel": "Cancel"
+	"Cancel": "Cancel",
+	"FileDelete.SuccessDeleted": "File deleted successfully",
+	"FileDelete.DeleteHeader": "DELETE FILE",
+	"FileDelete.ErrorMessage": "Error deleting file, try again later ... ",
+	"Images.Title": "Upload and Delete Images"
 }
 
