--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -4,17 +4,23 @@
 	"RegisterForm.Title": "Registro",
 	"RecoveryForm.Title": "Recuperar contraseña",
 	"LoginForm.Title": "Iniciar sesión",
-	"Errors.401": "Usuario o contraseña incorrectos",
-	"Errors.406": "Insuficientes permisos",
-	"Errors.500": "Error del servidor",
+	"Status.200": "Success",
+	"Status.400": "Error de validación",
+	"Status.401": "Usuario o contraseña incorrectos",
+	"Status.404": "No encontrado",
+	"Status.406": "Insuficientes permisos",
+	"Status.422": "Error de validación",
+	"Status.500": "Error del servidor",
 	"Users.Title": "Usuarios",
-	"ActionModal.AcceptButton": "Acceptar",
-	"ActionModal.RejectButton": "Cancelar",
 	"EditUser.Title": "EDITAR USUARIO",
 	"NewUser.Title": "NUEVO USUARIO",
 	"DeleteHeader": "ELIMINAR USUARIO",
-	"DeleteMessage": "¿Está seguro de que desea eliminar este usuario?",
+	"DeleteMessage": "¿Está seguro de que desea eliminar?",
 	"Create": "Crear",
 	"Accept": "Acceptar",
-	"Cancel": "Cancelar"
+	"Cancel": "Cancelar",
+	"FileDelete.SuccessDeleted": "Archivo eliminado correctamente",
+	"FileDelete.DeleteHeader": "ELIMINAR ARCHIVO",
+	"FileDelete.ErrorMessage": "Error al eliminar el archivo, inténtelo de nuevo más tarde",
+	"Images.Title": "Subir imagenes y eliminarlas"
 }
