put houses , retrive houses

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,7 +23,7 @@
 	"FileDelete.DeleteHeader": "DELETE FILE",
 	"FileDelete.ErrorMessage": "Error deleting file, try again later ... ",
 	"Images.Title": "Upload and Delete Images",
-	"NewFlat.Title": "Register new flat",
+	"NewHouse.Title": "Register new flat",
 	"AppNavbar.Home": "Home",
 	"AppNavbar.Rent": "Rent",
 	"AppNavbar.Sale": "Sale",
@@ -33,7 +33,8 @@
 	"AppNavbar.Login": "Login",
 	"AppNavbar.MyAccount": "My account",
 	"Admin.AdminUsers": "Admin Users",
-	"Admin.RegisterNewFlat": "Register New Flat",
+	"Admin.RegisterNewHouse": "Register New Flat",
+	"Admin.Properties": "Properties",
 	"SearchAddressForm.WithAddress": "Search Address",
 	"SearchAddressForm.WithLatLng": "Search Latitud, Longitude"
 }
