--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -44,8 +44,10 @@
 	"Constants.Bedrooms": "hab",
 	"Constants.FlatInStreet": "Piso en calle",
 	"Constants.SelectOne": "Seleccionar",
-	"Constants.SelectMin": "Min",
-	"Constants.SelectMax": "Max",
+	"Constants.SelectMin": "Min. €",
+	"Constants.SelectMax": "Max. €",
+	"Constants.Option.SelectMin": "Min",
+	"Constants.Option.SelectMax": "Max",
 	"Constants.ParkingIncluded": "Garage incluido",
 	"Constants.ParkingOptional": "Garage opcional",
 	"Constants.Exterior": "exterior",
@@ -67,5 +69,6 @@
 	"Constants.Filters": "Filtros",
 	"Constants.Apply": "Aplicar",
 	"Constants.ClearFilters": "Limpiar filtros",
-	"Properties.ListOfProperties.Title": "Lista de propiedades"
+	"Properties.ListOfProperties.Title": "Lista de propiedades",
+	"NotFound.Text.Title": "Lo sentimos, pero el elemento que estás buscando puede que ya no esté disponible o haya sido eliminado."
 }
